tests/fw_rules_tests/policies/test3-networkpolicy.yaml


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-new
  namespace: kube-system-new
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            app: skydive
      ports:
        - port: 85
          protocol: TCP
        - port: 86
          protocol: TCP
        - port: 87
          protocol: TCP
        - port: 88
          protocol: TCP
        - port: 89
          protocol: TCP
        - port: 90
          protocol: TCP
